--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -165,6 +165,51 @@ jobs:
        cmake --build . -j 2
        ctest --output-on-failure .
 
+  windows-mingw-release:
+    name: 'Windows (mingw-w64, Release, 11, x86_64, windows-2019)'
+    runs-on: windows-2019
+    defaults:
+      run:
+        shell: msys2 {0}
+    steps:
+    - name: 'Check Out'
+      uses: actions/checkout@v2
+
+    - name: 'Setup'
+      uses: msys2/setup-msys2@v2
+      with:
+        install: mingw-w64-x86_64-gcc mingw-w64-x86_64-cmake make
+        update: true
+
+    - name: 'Build'
+      run: |
+       mkdir build
+       cd build
+       cmake --version
+       cmake -DCMAKE_BUILD_TYPE=Release -G"MSYS Makefiles" ..
+       cmake --build . -j 2
+       ctest --output-on-failure .
+
+  windows-msvc-22:
+    name: 'Windows (Visual Studio 2022, Release, windows-2022)'
+    runs-on: windows-2022
+    steps:
+    - name: 'Check Out'
+      uses: actions/checkout@v2
+
+    - name: 'Build'
+      run: |
+       mkdir build
+       cd build
+       cmake --version
+       cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=14 -DBUILD_SHARED_LIBS=ON ..
+       cmake --build . --config Release -j 2
+
+    - name: 'Test'
+      run: |
+       cd build
+       ctest --output-on-failure -C Release
+
   windows-msvc-19:
     name: 'Windows (Visual Studio 2019, Release, windows-2019)'
     runs-on: windows-2019
@@ -178,7 +223,7 @@ jobs:
        cd build
        cmake --version
        cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=14 -DBUILD_SHARED_LIBS=ON ..
-       cmake --build . --config Release
+       cmake --build . --config Release -j 2
 
     - name: 'Test'
       run: |
@@ -198,7 +243,7 @@ jobs:
        cd build
        cmake --version
        cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=11 -DBUILD_SHARED_LIBS=ON ..
-       cmake --build . --config Release
+       cmake --build . --config Release -j 2
 
     - name: 'Test'
       run: |
