Split out test phase in mingw test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,6 +157,10 @@ jobs:
        cmake --version
        cmake -DCMAKE_BUILD_TYPE=Debug -G"MSYS Makefiles" ..
        cmake --build . -j 2
+
+    - name: 'Test'
+      run: |
+       cd build
        ctest --output-on-failure .
 
   windows-mingw-release:
@@ -182,6 +186,10 @@ jobs:
        cmake --version
        cmake -DCMAKE_BUILD_TYPE=Release -G"MSYS Makefiles" ..
        cmake --build . -j 2
+
+    - name: 'Test'
+      run: |
+       cd build
        ctest --output-on-failure .
 
   windows-msvc-22:
