--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -427,9 +427,10 @@ if(NOT _is_multi_config_generator)
     "/debian/"
     "/php/"
     "/.*build-.*/"
-    "cmake_install\\\\.cmake"
-    "/include/geos/version\\\\.h"
-    "/tools/geos-config"
+    "cmake_install\\\\.cmake\$"
+    "/include/geos/version\\\\.h\$"
+    "/tools/geos-config\$"
+    "/tools/geos\\\\.pc\$"
     "/bin/"
     ${PROJECT_BINARY_DIR}
     )
