--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -2616,16 +2616,18 @@ extern GEOSGeometry GEOS_DLL *GEOSMaximumInscribedCircle(
 
 /**
 * Constructs the "largest empty circle" (LEC) for a set of obstacle geometries, up to a
-* specified tolerance. The obstacles are point and line geometries.
-* The LEC is the largest circle which  has its center in the convex hull of the
-* obstacles (the boundary), and whose interior does not intersect with any obstacle.
+* specified tolerance. The obstacles are point and line geometries. Polygonal obstacles willl
+* be treated as linear features.
+* The LEC is the largest circle which  has its **center** inside the boundary,
+* and whose interior does not intersect with any obstacle. If no boundary is provided, the
+* convex hull of the obstacles is used as the boundary.
 * The LEC center is the point in the interior of the boundary which has the farthest distance from
 * the obstacles (up to tolerance). The LEC is determined by the center point and a point lying on an
 * obstacle indicating the circle radius.
 * The implementation uses a successive-approximation technique over a grid of square cells covering the obstacles and boundary.
 * The grid is refined using a branch-and-bound algorithm.  Point containment and distance are computed in a performant
 * way by using spatial indexes.
-* Returns a two-point linestring, with one point at the center of the inscribed circle and the other
+* Returns a two-point linestring, with the start point at the center of the inscribed circle and the end
 * on the boundary of the inscribed circle.
 * \param obstacles The geometries that the LEC must fit within without covering
 * \param boundary The area within which the LEC must reside
