--- a/benchmarks/geom/CMakeLists.txt
+++ b/benchmarks/geom/CMakeLists.txt
@@ -12,10 +12,10 @@
 IF(benchmark_FOUND)
     add_executable(perf_envelope
             EnvelopePerfTest.cpp
-            ${CMAKE_SOURCE_DIR}/src/geom/Envelope.cpp)
+            ${PROJECT_SOURCE_DIR}/src/geom/Envelope.cpp)
     target_include_directories(perf_envelope PUBLIC
-            $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-            $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>)
+            $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+            $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>)
     target_link_libraries(perf_envelope PRIVATE
             benchmark::benchmark geos_cxx_flags)
 endif()
