--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -368,6 +368,11 @@ install(DIRECTORY
   "${CMAKE_CURRENT_BINARY_DIR}/include/geos"
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
   FILES_MATCHING PATTERN "*.h")
+install(DIRECTORY
+  "${CMAKE_CURRENT_LIST_DIR}/include/geos"
+  "${CMAKE_CURRENT_BINARY_DIR}/include/geos"
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+  FILES_MATCHING PATTERN "*.hpp")
 if(NOT DISABLE_GEOS_INLINE)
   install(DIRECTORY
     "${CMAKE_CURRENT_LIST_DIR}/include/geos"
