--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -2607,8 +2607,9 @@ extern GEOSGeometry GEOS_DLL *GEOSConvexHull(const GEOSGeometry* g);
 * used to convert a multi-point into a polygonal area.
 * that contains all the points in the input Geometry
 * \param g The input geometry
-* \param ratioMode Either GEOS_DIM_LINE for linear ratio mode or GEOS_DIM_AREA for area ratio mode.
 * \param ratio The ratio value, between 0 and 1.
+* \param ratioMode Either GEOS_DIM_LINE for linear ratio mode or GEOS_DIM_AREA for area ratio mode.
+* \param allowHoles When non-zero, the polygonal output may contain holes.
 * \return A newly allocated geometry of the concave hull. NULL on exception.
 * The area ratio is the ratio of the concave hull area to the convex hull area.
 * 1 produces the convex hull; 0 produces maximum concaveness.
