Fix MonotoneChainBuilder::getChain with empty CoordinateString
See https://github.com/libgeos/geos/issues/539

Includes unit test and NEWS item

Also moves Geometry::difference test where it belongs, and enable
it (it was previously disabled).

--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -141,6 +141,7 @@ geos_unit_SOURCES = \
 	geom/Geometry/equalsTest.cpp \
 	geom/GeometryFactoryTest.cpp \
 	geom/GeometryFilterTest.cpp \
+	geom/Geometry/differenceTest.cpp \
 	geom/Geometry/isRectangleTest.cpp \
 	geom/Geometry/normalizeTest.cpp \
 	geom/Geometry/touchesTest.cpp \
@@ -159,6 +160,7 @@ geos_unit_SOURCES = \
 	geom/prep/PreparedGeometry/touchesTest.cpp \
 	geom/TriangleTest.cpp \
 	geom/util/GeometryExtracterTest.cpp \
+	index/chain/MonotoneChainBuilderTest.cpp \
 	index/strtree/SIRtreeTest.cpp \
 	index/strtree/SimpleSTRtreeTest.cpp \
 	index/kdtree/KdTreeTest.cpp \
