CMake: improvements so GEOS works as a subproject (#518)
* fixes to allow using as a subproject
* move project() call as early as possible
* limit build components if a subproject
* Use the PROJECT_IS_TOP_LEVEL variable, or emulate it in older CMake versions.
* Add GEOS:: namespaced-alias targets
* geos_c: fix build interface include dirs
* simple cmake super-build test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,65 +13,6 @@
 # modes for specific C/C++ language standard levels, and object libraries.
 cmake_minimum_required(VERSION 3.13)
 
-# Default to release build so packagers don't release debug builds
-set(DEFAULT_BUILD_TYPE Release)
-
-# Require CMake 3.13+ with VS generator for complete support of VS versions
-# and support by AppVeyor.
-if(${CMAKE_GENERATOR} MATCHES "Visual Studio")
-  cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
-endif()
-
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
-
-# TODO: Follow CMake detection of git and version tagging
-#       https://gitlab.kitware.com/cmake/cmake/blob/master/Source/CMakeVersionSource.cmake
-if(EXISTS ${CMAKE_SOURCE_DIR}/.git)
-  set(GEOS_BUILD_FROM_GIT ON)
-endif()
-
-# Make sure we know our build type
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE ${DEFAULT_BUILD_TYPE})
-  message(STATUS "GEOS: Using default build type: ${CMAKE_BUILD_TYPE}")
-else()
-  message(STATUS "GEOS: Build type: ${CMAKE_BUILD_TYPE}")
-endif()
-
-#-----------------------------------------------------------------------------
-# Options
-#-----------------------------------------------------------------------------
-include(CMakeDependentOption)
-
-## CMake global variables
-option(BUILD_SHARED_LIBS "Build GEOS with shared libraries" ON)
-set(CMAKE_CXX_STANDARD 11 CACHE STRING "C++ standard version to use (default is 11)")
-
-## GEOS custom variables
-option(BUILD_BENCHMARKS "Build GEOS benchmarks" OFF)
-cmake_dependent_option(GEOS_BUILD_DEVELOPER
-  "Build with compilation flags useful for development" ON
-  "GEOS_BUILD_FROM_GIT" OFF)
-mark_as_advanced(GEOS_BUILD_DEVELOPER)
-
-if (POLICY CMP0092)
-  # dont set /W3 warning flags by default, we already
-  # set /W4 anyway
-  cmake_policy(SET CMP0092 NEW)
-endif()
-
-#-----------------------------------------------------------------------------
-# Setup build directories
-#-----------------------------------------------------------------------------
-# Place executables and shared libraries in the same location for
-# convenience of direct execution from common spot and for
-# convenience in environments without RPATH support.
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-message(STATUS "GEOS: Run-time output: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
-message(STATUS "GEOS: Archives output: ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
-
 #-----------------------------------------------------------------------------
 # Version
 #-----------------------------------------------------------------------------
@@ -141,6 +82,77 @@ unset(_version_patch_word)
 message(STATUS "GEOS: Version ${GEOS_VERSION}")
 message(STATUS "GEOS: C API Version ${CAPI_VERSION}")
 message(STATUS "GEOS: JTS port ${JTS_PORT}")
+
+if(CMAKE_VERSION VERSION_LESS 3.21)
+  if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
+    set(PROJECT_IS_TOP_LEVEL ON)
+  else()
+    set(PROJECT_IS_TOP_LEVEL OFF)
+  endif()
+endif()
+
+#-----------------------------------------------------------------------------
+# Setup
+#-----------------------------------------------------------------------------
+
+# Default to release build so packagers don't release debug builds
+set(DEFAULT_BUILD_TYPE Release)
+
+# Require CMake 3.13+ with VS generator for complete support of VS versions
+# and support by AppVeyor.
+if(${CMAKE_GENERATOR} MATCHES "Visual Studio")
+  cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
+endif()
+
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
+# TODO: Follow CMake detection of git and version tagging
+#       https://gitlab.kitware.com/cmake/cmake/blob/master/Source/CMakeVersionSource.cmake
+if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/.git)
+  set(GEOS_BUILD_FROM_GIT ON)
+endif()
+
+# Make sure we know our build type
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE ${DEFAULT_BUILD_TYPE})
+  message(STATUS "GEOS: Using default build type: ${CMAKE_BUILD_TYPE}")
+else()
+  message(STATUS "GEOS: Build type: ${CMAKE_BUILD_TYPE}")
+endif()
+
+#-----------------------------------------------------------------------------
+# Options
+#-----------------------------------------------------------------------------
+include(CMakeDependentOption)
+
+## CMake global variables
+option(BUILD_SHARED_LIBS "Build GEOS with shared libraries" ON)
+set(CMAKE_CXX_STANDARD 11 CACHE STRING "C++ standard version to use (default is 11)")
+
+## GEOS custom variables
+option(BUILD_BENCHMARKS "Build GEOS benchmarks" OFF)
+cmake_dependent_option(GEOS_BUILD_DEVELOPER
+  "Build with compilation flags useful for development" ON
+  "GEOS_BUILD_FROM_GIT;PROJECT_IS_TOP_LEVEL" OFF)
+mark_as_advanced(GEOS_BUILD_DEVELOPER)
+
+if (POLICY CMP0092)
+  # dont set /W3 warning flags by default, we already
+  # set /W4 anyway
+  cmake_policy(SET CMP0092 NEW)
+endif()
+
+#-----------------------------------------------------------------------------
+# Setup build directories
+#-----------------------------------------------------------------------------
+# Place executables and shared libraries in the same location for
+# convenience of direct execution from common spot and for
+# convenience in environments without RPATH support.
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
+message(STATUS "GEOS: Run-time output: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
+message(STATUS "GEOS: Archives output: ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
 
 #-----------------------------------------------------------------------------
 # Install directories
@@ -268,6 +280,7 @@ check_library_exists(m pow "" HAVE_LIBM)
 # Target geos: C++ API library
 #-----------------------------------------------------------------------------
 add_library(geos "")
+add_library(GEOS::geos ALIAS geos)
 target_link_libraries(geos PUBLIC geos_cxx_flags PRIVATE $<BUILD_INTERFACE:ryu>)
 # ryu is an object library, nothing is actually being linked here. The BUILD_INTERFACE
 # switch was necessary to build on AppVeyor (CMake 3.16.2) but not locally (CMake 3.16.3)
@@ -289,6 +302,7 @@ endif()
 # Target geos_c: C API library
 #-----------------------------------------------------------------------------
 add_library(geos_c "")
+add_library(GEOS::geos_c ALIAS geos_c)
 target_link_libraries(geos_c PRIVATE geos)
 
 if(BUILD_SHARED_LIBS)
@@ -309,32 +323,40 @@ add_subdirectory(capi)
 #-----------------------------------------------------------------------------
 # Tests
 #-----------------------------------------------------------------------------
-include(CTest)
-if(BUILD_TESTING)
-  add_subdirectory(tests)
+if(PROJECT_IS_TOP_LEVEL)
+  include(CTest)
+  if(BUILD_TESTING)
+    add_subdirectory(tests)
+  endif()
 endif()
 
 #-----------------------------------------------------------------------------
 # Benchmarks
 #-----------------------------------------------------------------------------
-if(BUILD_BENCHMARKS)
+if(PROJECT_IS_TOP_LEVEL AND BUILD_BENCHMARKS)
   add_subdirectory(benchmarks)
 endif()
 
 #-----------------------------------------------------------------------------
 # Utils
 #-----------------------------------------------------------------------------
-add_subdirectory(util)
+if(PROJECT_IS_TOP_LEVEL)
+  add_subdirectory(util)
+endif()
 
 #-----------------------------------------------------------------------------
 # Documentation/Examples
 #-----------------------------------------------------------------------------
-add_subdirectory(doxygen)
+if(PROJECT_IS_TOP_LEVEL)
+  add_subdirectory(doxygen)
+endif()
 
 #-----------------------------------------------------------------------------
 # Web Site
 #-----------------------------------------------------------------------------
-add_subdirectory(web)
+if(PROJECT_IS_TOP_LEVEL)
+  add_subdirectory(web)
+endif()
 
 #-----------------------------------------------------------------------------
 # Install and export targets - support 'make install' or equivalent
@@ -399,69 +421,76 @@ add_subdirectory(tools)
 #-----------------------------------------------------------------------------
 # Uninstall
 #-----------------------------------------------------------------------------
+if(PROJECT_IS_TOP_LEVEL)
+  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/cmake/cmake_uninstall.cmake"
+    IMMEDIATE @ONLY)
 
-configure_file("${PROJECT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
-  "${PROJECT_BINARY_DIR}/cmake/cmake_uninstall.cmake"
-  IMMEDIATE @ONLY)
-
-add_custom_target(uninstall
-  "${CMAKE_COMMAND}" -P "${PROJECT_BINARY_DIR}/cmake/cmake_uninstall.cmake")
+  add_custom_target(uninstall
+    "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake/cmake_uninstall.cmake")
+endif()  # PROJECT_IS_TOP_LEVEL
 
 #-----------------------------------------------------------------------------
 # "make dist" workalike
 #-----------------------------------------------------------------------------
-get_property(_is_multi_config_generator GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
-if(NOT _is_multi_config_generator)
-  set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "GEOS Computational Geometry Library")
-  set(CPACK_PACKAGE_VENDOR "OSGeo")
-  set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_CURRENT_SOURCE_DIR}/README.md)
-  set(CPACK_SOURCE_GENERATOR "TBZ2")
-  set(CPACK_PACKAGE_VERSION_MAJOR ${GEOS_VERSION_MAJOR})
-  set(CPACK_PACKAGE_VERSION_MINOR ${GEOS_VERSION_MINOR})
-  set(CPACK_PACKAGE_VERSION_PATCH ${GEOS_VERSION_PATCH})
-  set(CPACK_SOURCE_PACKAGE_FILE_NAME "geos-${GEOS_VERSION}")
+if(PROJECT_IS_TOP_LEVEL)
+  get_property(_is_multi_config_generator GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
+  if(NOT _is_multi_config_generator)
+    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "GEOS Computational Geometry Library")
+    set(CPACK_PACKAGE_VENDOR "OSGeo")
+    set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_CURRENT_SOURCE_DIR}/README.md)
+    set(CPACK_SOURCE_GENERATOR "TBZ2")
+    set(CPACK_PACKAGE_VERSION_MAJOR ${GEOS_VERSION_MAJOR})
+    set(CPACK_PACKAGE_VERSION_MINOR ${GEOS_VERSION_MINOR})
+    set(CPACK_PACKAGE_VERSION_PATCH ${GEOS_VERSION_PATCH})
+    set(CPACK_SOURCE_PACKAGE_FILE_NAME "geos-${GEOS_VERSION}")
 
-  set(CPACK_SOURCE_IGNORE_FILES
-    "/\\\\.git"
-    "/autogen\\\\.sh"
-    "/tools/ci"
-    "/HOWTO_RELEASE"
-    "/autom4te\\\\.cache"
-    "\\\\.yml\$"
-    "\\\\.deps"
-    "/debian/"
-    "/php/"
-    "/.*build-.*/"
-    "cmake_install\\\\.cmake\$"
-    "/include/geos/version\\\\.h\$"
-    "/tools/geos-config\$"
-    "/tools/geos\\\\.pc\$"
-    "/bin/"
-    ${PROJECT_BINARY_DIR}
-    )
+    set(CPACK_SOURCE_IGNORE_FILES
+      "/\\\\.git"
+      "/autogen\\\\.sh"
+      "/tools/ci"
+      "/HOWTO_RELEASE"
+      "/autom4te\\\\.cache"
+      "\\\\.yml\$"
+      "\\\\.deps"
+      "/debian/"
+      "/php/"
+      "/.*build-.*/"
+      "cmake_install\\\\.cmake\$"
+      "/include/geos/version\\\\.h\$"
+      "/tools/geos-config\$"
+      "/tools/geos\\\\.pc\$"
+      "/bin/"
+      ${CMAKE_CURRENT_BINARY_DIR}
+      )
 
-  # message(STATUS "GEOS: CPACK_SOURCE_PACKAGE_FILE_NAME: ${CPACK_SOURCE_PACKAGE_FILE_NAME}")
-  # message(STATUS "GEOS: CPACK_SOURCE_IGNORE_FILES: ${CPACK_SOURCE_IGNORE_FILES}")
-  # message(STATUS "GEOS: CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
-  include(CPack)
-  add_custom_target(dist COMMAND ${CMAKE_MAKE_PROGRAM} package_source)
+    # message(STATUS "GEOS: CPACK_SOURCE_PACKAGE_FILE_NAME: ${CPACK_SOURCE_PACKAGE_FILE_NAME}")
+    # message(STATUS "GEOS: CPACK_SOURCE_IGNORE_FILES: ${CPACK_SOURCE_IGNORE_FILES}")
+    # message(STATUS "GEOS: CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
+    include(CPack)
+    add_custom_target(dist COMMAND ${CMAKE_MAKE_PROGRAM} package_source)
 
-  message(STATUS "GEOS: Configured 'dist' target")
-endif()
+    message(STATUS "GEOS: Configured 'dist' target")
+  endif()
+endif()  # PROJECT_IS_TOP_LEVEL
 
 #-----------------------------------------------------------------------------
 # "make check" workalike
 #-----------------------------------------------------------------------------
 
-add_custom_target(check COMMAND ${CMAKE_BUILD_TOOL} test)
+if(PROJECT_IS_TOP_LEVEL)
+  add_custom_target(check COMMAND ${CMAKE_BUILD_TOOL} test)
+endif()
 
 #-----------------------------------------------------------------------------
 # "make distcheck" workalike
 #-----------------------------------------------------------------------------
-if(NOT _is_multi_config_generator)
-  find_package(MakeDistCheck)
-  AddMakeDistCheck()
-  message(STATUS "GEOS: Configured 'distcheck' target")
-endif()
+if(PROJECT_IS_TOP_LEVEL)
+  if(NOT _is_multi_config_generator)
+    find_package(MakeDistCheck)
+    AddMakeDistCheck()
+    message(STATUS "GEOS: Configured 'distcheck' target")
+  endif()
 
-unset(_is_multi_config_generator)
+  unset(_is_multi_config_generator)
+endif()  # PROJECT_IS_TOP_LEVEL
