--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -741,6 +741,13 @@ extern GEOSGeometry GEOS_DLL *GEOSConvexHull_r(
     GEOSContextHandle_t handle,
     const GEOSGeometry* g);
 
+/** \see GEOSConcaveHull */
+extern GEOSGeometry GEOS_DLL *GEOSConcaveHull_r(
+    GEOSContextHandle_t handle,
+    const GEOSGeometry* g,
+    double ratio,
+    unsigned int allowHoles);
+
 /** \see GEOSMinimumRotatedRectangle */
 extern GEOSGeometry GEOS_DLL *GEOSMinimumRotatedRectangle_r(
     GEOSContextHandle_t handle,
@@ -2574,6 +2581,31 @@ extern GEOSGeometry GEOS_DLL *GEOSBoundary(const GEOSGeometry* g);
 * \see geos::operation::overlayng::OverlayNG
 */
 extern GEOSGeometry GEOS_DLL *GEOSConvexHull(const GEOSGeometry* g);
+
+/**
+* Returns "concave hull" of a geometry. The concave hull is fully
+* contained within the convex hull and also contains all the
+* points of the input, but in a smaller area.
+* The area ratio is the ratio
+* of the area of the convex hull and the concave hull. Frequently
+* used to convert a multi-point into a polygonal area.
+* that contains all the points in the input Geometry
+* \param g The input geometry
+* \param ratio The ratio value, between 0 and 1.
+* \param allowHoles When non-zero, the polygonal output may contain holes.
+* \return A newly allocated geometry of the concave hull. NULL on exception.
+* The area ratio is the ratio of the concave hull area to the convex hull area.
+* 1 produces the convex hull; 0 produces maximum concaveness.
+* The Length Ratio is a fraction determining the length of the longest
+* edge in the computed hull.  1 produces the convex hull;
+* 0 produces a hull with maximum concaveness
+* Caller is responsible for freeing with GEOSGeom_destroy().
+* \see geos::algorithm::hull::ConcaveHull
+*/
+extern GEOSGeometry GEOS_DLL *GEOSConcaveHull(
+    const GEOSGeometry* g,
+    double ratio,
+    unsigned int allowHoles);
 
 /**
 * Returns the minimum rotated rectangular POLYGON which encloses
