--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -3987,7 +3987,7 @@ extern int GEOS_DLL GEOSGeom_getYMax(const GEOSGeometry* g, double* value);
 * \param[out] ymin Pointer to place result for minimum Y value
 * \param[out] xmax Pointer to place result for maximum X value
 * \param[out] ymax Pointer to place result for maximum Y value
-* \return 0 on exception
+* \return 1 on success, 0 on exception
 */
 extern int GEOS_DLL GEOSGeom_getExtent(
     const GEOSGeometry* g,
