Add geosop utility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -288,6 +288,11 @@ if(BUILD_BENCHMARKS)
 endif()
 
 #-----------------------------------------------------------------------------
+# Utils
+#-----------------------------------------------------------------------------
+add_subdirectory(util)
+
+#-----------------------------------------------------------------------------
 # Documentation/Examples
 #-----------------------------------------------------------------------------
 add_subdirectory(doc)
