--- a/.drone-1.0.yml
+++ b/.drone-1.0.yml
@@ -1,5 +1,6 @@
-# This is for the dronie 1.0 agent
-# https://docs.drone.io/user-guide/pipeline/steps/ https://docs.drone.io/user-guide/pipeline/migrating/
+# Syntax documentation:
+# https://docs.drone.io/pipeline/overview/
+
 # See https://git.osgeo.org/gitea/geos/geos-docker
 test-image: &test-image docker.osgeo.org/geos/build-test:alpine
 
