Add windows/arm64 cross-compilation stage to Azure pipeline

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -197,10 +197,17 @@ stages:
         #   TOOLSET: msvc-14.3
         #   CXXSTD: 20
         #   VM_IMAGE: 'windows-2022'
-        VS 2019 C++20:
+        VS 2019 C++20 x64:
           TOOLSET: msvc-14.2
           CXXSTD: 20
           VM_IMAGE: 'windows-2019'
+          ARCH: x64
+        VS 2019 C++20 ARM64:
+          TOOLSET: msvc-14.2
+          CXXSTD: 20
+          VM_IMAGE: 'windows-2019'
+          ARCH: ARM64
+
     pool:
       vmImage: $(VM_IMAGE)
     steps:
@@ -212,19 +219,20 @@ stages:
         Write-Host "##vso[task.prependpath]C:\cmake\bin"
       displayName: 'Install'
     - script: |
-        mkdir build.cxx%CXXSTD%
-        cd build.cxx%CXXSTD%
+        mkdir build.cxx%CXXSTD%.%ARCH%
+        cd build.cxx%CXXSTD%.%ARCH%
         cmake --version
-        cmake -DCMAKE_CXX_STANDARD=%CXXSTD% -DBUILD_SHARED_LIBS=ON ..
+        cmake -DCMAKE_CXX_STANDARD=%CXXSTD% -DBUILD_SHARED_LIBS=ON -A %ARCH% ..
       displayName: 'CMake'
     - script: |
-        cd build.cxx%CXXSTD%
+        cd build.cxx%CXXSTD%.%ARCH%
         cmake --build . --config %BUILD_TYPE%
       displayName: 'Build'
     - script: |
-        cd build.cxx%CXXSTD%
+        cd build.cxx%CXXSTD%.%ARCH%
         ctest -V --output-on-failure -C %BUILD_TYPE%
       displayName: 'Test'
+      condition: and(succeeded(), eq(variables['ARCH'], 'x64'))
 
   - job: 'macOS'
     pool:
