CMake: add option USE_CCACHE=OFF to use ccache to compile C/C++ objs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,7 @@ endif()
 #-----------------------------------------------------------------------------
 # Options
 #-----------------------------------------------------------------------------
+include(Ccache)
 include(CMakeDependentOption)
 
 ## CMake global variables
