directed line merger: C API

--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -933,6 +933,11 @@ extern GEOSGeometry GEOS_DLL *GEOSLineMerge_r(
     GEOSContextHandle_t handle,
     const GEOSGeometry* g);
 
+/** \see GEOSLineMergeDirected */
+extern GEOSGeometry GEOS_DLL *GEOSLineMergeDirected_r(
+    GEOSContextHandle_t handle,
+    const GEOSGeometry* g);
+
 /** \see GEOSReverse */
 extern GEOSGeometry GEOS_DLL *GEOSReverse_r(
     GEOSContextHandle_t handle,
@@ -2610,9 +2615,23 @@ extern char GEOS_DLL GEOSisClosed(const GEOSGeometry *g);
 ///@{
 
 /**
-* Set the "spatial reference id" (SRID) for this geometry.
-* \param g Input geometry
-* \param SRID SRID number or 0 for unknown SRID.
+* Sews together a set of fully noded LineStrings
+* removing any cardinality 2 nodes in the linework
+* only if possible without changing order of points.
+* \param g The input linework
+* \return The merged linework
+* Caller is responsible for freeing with GEOSGeom_destroy().
+* \see geos::operation::linemerge::LineMerger
+*/
+extern GEOSGeometry GEOS_DLL *GEOSLineMergeDirected(const GEOSGeometry* g);
+
+/**
+* For geometries with coordinate sequences, reverses the order
+* of the sequences. Converts CCW rings to CW. Reverses direction
+* of LineStrings.
+* \param g The input geometry
+* \return The reversed geometry
+* Caller is responsible for freeing with GEOSGeom_destroy().
 */
 extern void GEOS_DLL GEOSSetSRID(GEOSGeometry* g, int SRID);
 
